# serializer version: 1
# name: test_dotted_expr_ok[dotted_column_expr_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  column_expr
                    column_expr
                      ident	column1
                    ident	column2
                  ident	column3
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_column_expr_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  column_expr
                    ident	column1
                  ident	column2
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__path_expression
                    bigquery__path_expression
                      ident	`project1`
                    ident	dataset1
                  ident	table1
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__path_expression
                    ident	dataset1
                  ident	table1
  
  '''
# ---
# name: test_function_call_ok[fcall_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__function_call_expr
                    column_expr
                      ident	FUNC
                    bigquery__function_args
                      bigquery__pos_arg
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
                      bigquery__named_arg
                        ident	name2
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__function_call_expr
                    column_expr
                      ident	FUNC
                    bigquery__function_args
                      bigquery__named_arg
                        ident	name1
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
                      bigquery__named_arg
                        ident	name2
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__function_call_expr
                    column_expr
                      ident	FUNC
                    bigquery__function_args
                      bigquery__named_arg
                        ident	name1
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__function_call_expr
                    column_expr
                      ident	FUNC
                    bigquery__function_args
                      bigquery__pos_arg
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
                      bigquery__pos_arg
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_none]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__function_call_expr
                    column_expr
                      ident	FUNC
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__function_call_expr
                    column_expr
                      ident	FUNC
                    bigquery__function_args
                      bigquery__pos_arg
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__subscript_expr
                    column_expr
                      bigquery__subscript_expr
                        column_expr
                          ident	column1
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	0
                    column_expr
                      bigquery__literal
                        bigquery__integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__subscript_expr
                    column_expr
                      ident	column1
                    column_expr
                      bigquery__literal
                        bigquery__integer_literal	0
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_offset]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__subscript_expr
                    column_expr
                      ident	column1
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          ident	OFFSET
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_path_expr_nested]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__subscript_expr
                    column_expr
                      bigquery__subscript_expr
                        column_expr
                          column_expr
                            ident	column1
                          ident	column2
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	0
                    column_expr
                      bigquery__literal
                        bigquery__integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_string_literal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__subscript_expr
                    column_expr
                      ident	column1
                    column_expr
                      bigquery__literal
                        bigquery__string_literal	'key1'
  
  '''
# ---
